--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,4 +1,14 @@
 /*-----------------------------------------------------------*/
+/*--- Colour Palette ---*/
+/*-----------------------------------------------------------*/
+/*
+  #A5D7E8
+  #576CBC
+  #19376D
+  #0B2447
+*/
+
+/*-----------------------------------------------------------*/
 /*--- Basic Setup ---*/
 /*-----------------------------------------------------------*/
 * {
@@ -12,10 +22,7 @@ html, body {
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
-    background: linear-gradient(338deg,#f2b76a,#49d889,#a1b15f,#ab569d,#a9e9ce);
-    background-size: 360% 360%;
-    animation: gradient-animation 36s ease infinite;
-    -webkit-animation: gradient-animation 36s ease infinite;
+    background-color: #0B2447;
 }
 
 a:link, a:visited {
@@ -29,105 +36,59 @@ a:link, a:visited {
 .hero {
    height: 98vh;
    width: 75%;
-   margin: 0 12.5% 0 12.5%;
-}
-
-@keyframes gradient-animation {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
+   margin-left: auto;
+   margin-right: auto;
 }
 
 /*-----------------------------------------------------------*/
 /*--- Hero Page ---*/
 /*-----------------------------------------------------------*/
-.hero h1 {
-  border-right: .15em solid #000e;
-  white-space: nowrap;
-  overflow: hidden;
-  text-transform: uppercase;
-}
-
-.hero h1:nth-child(1) {
-  font-weight: 700;
-  font-size: 65px;
+.hero h1:nth-child(1){
+  color: #19376D;
   position: absolute;
-  top: 35%;
-  left: 20%;
-  width: 35%;
-  animation: type 2.5s steps(40, end);
-  -webkit-animation: type 2.5s steps(40, end);
-  animation-fill-mode: forwards;
-}
-
-.hero h1:nth-child(2) {
-  opacity: 0;
-  font-weight: 600;
+  font-weight: bold 600;
   font-size: 55px;
+  top: 35%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+
+.hero h1:nth-child(2){
+  color: #A5D7E8;
   position: absolute;
-  top: 42.5%;
-  left: 20%;
-  width: 58%;
-  animation: type2 2.5s steps(40, end), blink .5s step-end infinite;
-  -webkit-animation: type2 2.5s steps(40, end), blink .5s step-end infinite;
-  animation-delay: 2.5s;
-  animation-fill-mode: forwards;
+  font-weight: 900;
+  font-size: 125px;
+  top: 45%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
 }
 
-
-@keyframes type {
-  0% {
-    width: 0;
-  }
-  99.9% {
-    border-right: .15em solid #000;
-  }
-  100% {
-    border: none;
-  }
+.hero h1:nth-child(3){
+  color: #A5D7E8;
+  position: absolute;
+  font-weight: 900;
+  font-size: 125px;
+  top: 57%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
 }
 
-@keyframes type2 {
-  0% {
-    width: 0;
-  }
-  1% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes blink {
-  50% {
-    border-color: transparent;
-  }
-}
-
-.invis {
-  opacity: 0;
-  animation-name: fadein;
-  animation-duration: 3s;
-  animation-delay: 5s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes fadein {
-  from  {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
+/*---- Main-Nav ----*/
 .main-nav {
   float: right;
   list-style: none;
@@ -141,73 +102,98 @@ a:link, a:visited {
 }
 
 .main-nav li a:link, .main-nav li a:visited {
-  color: #4e4e4e;
+  color: #A5D7E8;
   text-decoration: none;
   text-transform: uppercase;
-  font-weight: 400;
-  font-size: 100%;
-  border-bottom: 2px solid transparent;
-  transition: border-bottom 0.2s;
-  -webkit-transition: border-bottom 0.2s;
-  -moz-transition: border-bottom 0.2s;
-  -ms-transition: border-bottom 0.2s;
-  -o-transition: border-bottom 0.2s;
-  padding: 8px 0;
+  font-weight: 300;
+  font-size: 30px;
 }
 
 .main-nav li a:hover, .main-nav li a:active {
-  border-bottom: 2px solid #000;
-  color: #000;
+  border-bottom: 2px solid #19376D;
+  color: #19376D;
 }
 
-.logo-top {
-  position: fixed;
-  font-size: 45px;
-  cursor: pointer;
-  z-index: 99;
-  bottom: 10%;
-  right: 15%;
+/*---- Buttons ----*/
+.btn:link {
+  padding: 10px 20px;
+  background-color: #576CBC;
+  box-shadow: 0 0 5px 5px #fff;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
+.btn:hover {
+  color: #19376D;
+  background-color: #A5D7E8;
+  box-shadow: none;
+}
+
+.btn-ghost {
+  color: #A5D7E8;
+  border: 1px solid #A5D7E8;
+  font-size: 30px;
+  position: absolute;
+  left: 50%;
+  top: 67%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+
+.btn-ghost:link {
+  padding: 10px 20px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.btn-ghost:hover {
+  background-color: #A5D7E8;
+  color: #19376D;
+  box-shadow: 0 0 5px 5px #fff;
+}
+
+/*---- Hyper-links ----*/
 .hyper-links {
   list-style: none;
+  /* position: absolute;
+  top: 67%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%); */
   padding-top: 25px;
-  position: absolute;
-  top: 50%;
-  left: 45%;
 }
 
 .hyper-links li {
   display: inline-block;
-  margin-left: 30px;
+  font-size: 35px;
+  margin-left: 25px;
 }
 
-.hyper-links li a:link, .hyper-links li a:visited {
+.hyper-links li a {
   color: #4e4e4e;
 }
 
-.ion-logo {
-  font-size: 45px;
-}
-
-.mail:hover, .mail:active {
-  color: #f84444;
-}
-
-.logo-linkedin:hover, .logo-linkedin:active {
-  color: #0072b1;
-}
-
-.logo-github:hover, .logo-github:active {
-  color: #171515;
-}
-
-.nav-scroll-instruction {
+/*---- Scroll-Nav ----*/
+.nav-scroll {
   color: #4e4e4e;
   position: absolute;
-  left: 50.75%;
-  font-size: 20px;
   top: 88%;
+  left: 50%;
+  margin-right: -50%;
   transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
@@ -216,53 +202,35 @@ a:link, a:visited {
 }
 
 .logo-down {
-  color: #4e4e4e;
-  position: absolute;
-  font-size: 45px;
-  top: 90%;
-  left: 49.75%;
-}
-
-.nav-scroll {
-  animation-name: breathing;
-  animation-duration: 1s;
-  animation-delay: 6s;
+  top: 91%;
+  font-size: 35px;
+  animation-name: slide;
+  animation-duration: 2s;
   animation-iteration-count: infinite;
 }
 
-@keyframes breathing {
-  0% {
-      opacity: 0.25;
-  }
-
-  25% {
-      opacity: 0.5;
-  }
-
+@keyframes slide {
   50% {
-      opacity: 1;
-      transform: translateY(10px);
-      -webkit-transform: translateY(10px);
-      -moz-transform: translateY(10px);
-      -ms-transform: translateY(10px);
-      -o-transform: translateY(10px);
-  }
-
-  75% {
-      opacity: 0.5;
-  }
-
-  100% {
-      opacity: 0.25;
+    transform: translate(-18px, 5px);
+    -webkit-transform: translate(-18px, 5px);
+    -moz-transform: translate(-18px, 5px);
+    -ms-transform: translate(-18px, 5px);
+    -o-transform: translate(-18px, 5px);
   }
 }
 
+.logo-down:hover {
+  color: #A5D7E8;
+}
+
 /*-----------------------------------------------------------*/
-/*--- Projects -Reusable---*/
+/*--- Projects ---*/
 /*-----------------------------------------------------------*/
 .projects {
+  height: 100vh;
   width: 75%;
-  margin: 0 12.5% 0 12.5%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .proj {
@@ -270,43 +238,26 @@ a:link, a:visited {
 }
 
 .project-title {
-  margin-left: 50px;
-  padding-left: 45px;
-  clear: both;
-}
-
-.project-title h2, h1 {
-  padding: 0;
-  margin: 0;
-  display: inline;
+  padding-top: 15px;
+  padding-bottom: 20px;
+  margin-left: 100px;
 }
 
 .numerical-title {
-  font-size: 25px;
-  padding-top: 15px;
   font-weight: 300;
+  font-size: 45px;
 }
 
 .title {
-  font-size: 45px;
-  font-weight: 400;
-}
-
-.project-title-description {
-  font-size: 65px;
   font-weight: 600;
-}
-
-.project-container {
-  margin: auto;
-  padding-top: 30px;
+  font-size: 65px;
 }
 
 img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   width: 65%;
   border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -314,6 +265,19 @@ img {
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
   box-shadow: 1px 2px 3px 4px rgba(12,12,12,0.2);
+}
+
+.project-description {
+  width: 55%;
+  padding-top: 15px;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.project-description p {
+  font-size: 25px;
 }
 
 .slide{
@@ -331,6 +295,8 @@ img {
   color: #4e4e4e;
   transition: 0.6s ease;
   user-select: none;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .prev:hover, .next:hover {
@@ -341,7 +307,7 @@ img {
   cursor: pointer;
   height: 15px;
   width: 15px;
-  margin: 0 2px;
+  margin: 0 10px;
   background-color: #4e4e4e;
   border-radius: 50%;
   display: inline-block;
@@ -370,52 +336,34 @@ img {
   to {opacity: 1;}
 }
 
-.project-description {
-  float: right;
-  margin-right: 320px;
-  margin-top: 25px;
-  width: 35%;
-  height: 250px;
-}
-
-.project-description p {
-  padding: 10px 0 0 10px;
-  font-size: 20px;
-}
-
-/*-----------------------------------------------------------*/
-/*--- Project-1 ---*/
-/*-----------------------------------------------------------*/
+/*---- Project-1 ----*/
 .project-1 {
-  background-color: #a1b15fd2;
+  background-color: #19376D;
+  color: #0B2447;
 }
 
-/*-----------------------------------------------------------*/
-/*--- Project-2 ---*/
-/*-----------------------------------------------------------*/
+/*---- Project-2 ----*/
 .project-2 {
-  background-color: #49d889;
+  background-color: #576CBC;
+  color: #19376D;
 }
 
-/*-----------------------------------------------------------*/
-/*--- Project-3 ---*/
-/*-----------------------------------------------------------*/
+/*---- Project-3 ----*/
 .project-3 {
-  background-color: #f2b76a;
+  background-color: #A5D7E8;
+  color: #576CBC;
 }
 
-/*-----------------------------------------------------------*/
-/*--- Project-4 ---*/
-/*-----------------------------------------------------------*/
+/*---- Project-4 ----*/
 .project-4 {
-  background-color: #ab569d;
+  background-color: #0B2447;
+  color: #A5D7E8;
 }
 
-/*-----------------------------------------------------------*/
-/*--- Project-5 ---*/
-/*-----------------------------------------------------------*/
+/*---- Project-3 ----*/
 .project-5 {
-  background-color: #a9e9ce;
+  background-color: #19376D;
+  color: #0B2447;
 }
 
 /*-----------------------------------------------------------*/
@@ -423,26 +371,20 @@ img {
 /*-----------------------------------------------------------*/
 .left {
   float: left;
-  width: 30%;
-  margin-left: 50px;
+  width: 50%;
   position: relative;
   top: 20%;
 }
 
-.right {
-  float: right;
-  width: 40%;
-  position: relative;
-  top: 22.5%;
-}
-
-.right p {
+.left p {
   font-weight: 400;
   letter-spacing: 1.5px;
+  width: 75%;
+  color: #A5D7E8;
 }
 
-.right p span {
-  color:#0004ff;
+.left p span {
+  color:#576CBC;
 }
 
 .para {
@@ -457,5 +399,9 @@ img {
 }
 
 .logo-document:hover {
-  color: #0004ff;
+  color: #19376D;
 }
+
+/*-----------------------------------------------------------*/
+/*--- Media Query ---*/
+/*-----------------------------------------------------------*/
