--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -114,6 +114,48 @@ a:link, a:visited {
   color: #19376D;
 }
 
+/*---- Mobile-Nav ----*/
+#mobile-nav-home {
+  display: none;
+}
+
+#mobile-nav-about {
+  display: none;
+}
+
+.burger-menu {
+  margin-top: 80px;
+}
+
+.burger-menu a {
+  color: #A5D7E8;
+  padding: 14px 16px;
+  text-decoration: none;
+  display: block;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.burger-menu a:hover {
+  background-color: #A5D7E8;
+  border: 1px solid #A5D7E8;
+  color: #19376D;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.burger-nav {
+  color: #A5D7E8;
+  display: none;
+  float: right;
+  font-size: 45px;
+  margin-top: 75px;
+}
+
+
 /*---- Buttons ----*/
 .btn:link {
   padding: 10px 20px;
@@ -278,6 +320,7 @@ img {
 
 .project-description p {
   font-size: 25px;
+  text-align: center;
 }
 
 .slide{
@@ -356,11 +399,11 @@ img {
 
 /*---- Project-4 ----*/
 .project-4 {
-  background-color: #0B2447;
+  background-color: #19376D;
   color: #A5D7E8;
 }
 
-/*---- Project-3 ----*/
+/*---- Project-5 ----*/
 .project-5 {
   background-color: #19376D;
   color: #0B2447;
@@ -373,6 +416,13 @@ img {
   float: left;
   width: 50%;
   position: relative;
+}
+
+.about-image {
+  top: 20%;
+}
+
+.about-detail {
   top: 20%;
 }
 
@@ -402,6 +452,443 @@ img {
   color: #19376D;
 }
 
+.links {
+  position: absolute;
+  top: 68%;
+  left: 50%;
+}
+
+footer {
+  background-color: #0B2447;
+  color: #19376D;
+  height: 2.5vh;
+  text-align: center;
+}
+
 /*-----------------------------------------------------------*/
 /*--- Media Query ---*/
 /*-----------------------------------------------------------*/
+@media only screen and (max-width: 2142px) {
+  .about-detail {
+    top: 15%;
+  }
+}
+
+@media only screen and (max-width: 1997px) {
+  .about-detail {
+    font-size: 18px;
+  }
+
+  .links {
+    top: 60%;
+  }
+}
+
+@media only screen and (max-width: 1956px) {
+  .links {
+    top: 63%;
+  }
+}
+
+@media only screen and (max-width: 1711px) {
+  .links {
+    top: 67%;
+  }
+}
+
+@media only screen and (max-width: 1490px) {
+  .links {
+    top: 71%;
+  }
+}
+
+@media only screen and (max-width: 1440px) {
+  .about-detail {
+    font-size: 14px;
+  }
+
+  .links {
+    top: 57%;
+  }
+}
+
+@media only screen and (max-width: 1385px) {
+  .links {
+    top: 59%;
+  }
+}
+
+@media only screen and (max-width: 1035px) {
+  .links {
+    top: 73%;
+    font-size: 55px;
+  }
+
+  .about-detail {
+    top: 20%;
+  }
+
+  .logo-document {
+    font-size: 35px;
+    top: 13px;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  .left {
+    float: none;
+    position: inherit;
+  }
+
+  .about-image {
+    width: 25%;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+  }
+
+  .about-detail {
+    width: 75%;
+    position: absolute;
+    top: 62%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    text-align: center;
+    margin-left: 10%;
+  }
+}
+
+@media only screen and (max-width: 794px) {
+  .links {
+    top: 75%;
+  }
+}
+
+@media only screen and (max-width: 1980px) {
+  .burger-nav {
+    display: none;
+  }
+
+  .main-nav {
+    margin-right: 85px;
+  }
+
+  .main-nav li a:link, .main-nav li a:visited {
+    font-size: 26px;
+  }
+
+  .numerical-title {
+    font-size: 35px;
+  }
+
+  .title {
+    font-size: 60px;
+  }
+
+  img {
+    width: 60%;
+  }
+
+  .project-description p {
+    font-size: 22px;
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 1780px) {
+  .burger-nav {
+    display: none;
+  }
+
+  .main-nav {
+    margin-right: 45px;
+  }
+
+  .main-nav li a:link, .main-nav li a:visited {
+    font-size: 22px;
+  }
+  
+  .numerical-title {
+    font-size: 35px;
+  }
+
+  .title {
+    font-size: 60px;
+  }
+
+  img {
+    width: 75%;
+  }
+
+  .project-description {
+    width: 65%;
+  }
+}
+
+@media only screen and (max-width: 1520px) {
+  .burger-nav {
+    display: none;
+  }
+
+  .hero h1:nth-child(2), .hero h1:nth-child(3){
+    font-size: 105px;
+  }
+}
+
+@media only screen and (max-width: 1320px) {
+  .burger-nav {
+    display: none;
+  }
+
+  .hero h1:nth-child(2), .hero h1:nth-child(3){
+    font-size: 95px;
+  }
+
+  .main-nav {
+    margin-right: 0;
+  }
+
+  .proj {
+    height: 72vh;
+  }
+
+  .project-title {
+    margin-left: 0;
+  }
+
+  .numerical-title {
+    font-size: 28px;
+  }
+
+  .title {
+    font-size: 50px;
+  }
+
+  img {
+    width: 85%;
+  }
+
+  .project-description {
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 1120px) {
+  .burger-nav {
+    display: none;
+  }
+
+  .hero h1:nth-child(1) {
+    font-size: 45px;
+  }
+
+  .hero h1:nth-child(2), .hero h1:nth-child(3){
+    font-size: 75px;
+  }
+
+  .main-nav {
+    margin-right: 0;
+  }
+
+  img {
+    width: 90%;
+  }
+
+  .project-description {
+    width: 85%;
+  }
+
+  .project-description p {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .burger-nav {
+    display: none;
+  }
+
+  .hero h1:nth-child(2) {
+    top: 42%;
+  }
+
+  .hero h1:nth-child(3) {
+    top: 50%;
+  }
+
+  img {
+    width: 95%;
+  }
+
+  .about-detail {
+    top: 62%;
+  }
+}
+
+@media only screen and (max-width: 830px) {
+  .burger-nav {
+    display: none;
+  }
+
+  .hero h1:nth-child(1) {
+    font-size: 40px;
+  }
+
+  .hero h1:nth-child(2), .hero h1:nth-child(3){
+    font-size: 65px;
+  }
+
+  .btn-ghost {
+    top: 58%;
+  }
+
+  img{
+    width: 100%;
+  }
+
+  .about-detail {
+    top: 62%;
+  }
+}
+
+@media only screen and (max-width: 825px) {
+  .burger-nav {
+    display: none;
+  }
+
+  .numerical-title {
+    font-size: 18px;
+  }
+
+  .title {
+    font-size: 35px;
+  }
+
+  .about-detail {
+    top: 60%;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  .hero h1:nth-child(1) {
+    font-size: 35px;
+  }
+
+  .hero h1:nth-child(2) {
+    font-size: 55px;
+    top: 40%;
+  }
+
+  .hero h1:nth-child(3) {
+    font-size: 55px;
+    top: 46%;
+  }
+
+  .btn-ghost {
+    top: 53%;
+    font-size: 20px; 
+  }
+
+  .main-nav {
+    display: none;
+  }
+
+  .burger-nav {
+    display: block;
+  }
+
+  .about-detail {
+    width: 100%;
+  }
+
+  .links {
+    left: 48%;
+    top: 82%;
+  }
+
+  .left {
+    top: 35%;
+  }
+
+  .about-detail {
+    top: 66%;
+    width: 80%;
+    left: 60%;
+    margin: 0;
+  }
+}
+
+@media only screen and (max-width: 615px) {
+  .hero h1:nth-child(1) {
+    font-size: 30px;
+  }
+
+  .hero h1:nth-child(2) {
+    font-size: 45px;
+    top: 39%;
+  }
+
+  .hero h1:nth-child(3) {
+    font-size: 45px;
+    top: 44%;
+  }
+
+  .btn-ghost {
+    top: 49%;
+  }
+
+  .project-description {
+    width: 100%;
+  }
+
+  .project-description p {
+    font-size: 17px;
+  }
+
+  .links {
+    top: 84%;
+  }
+
+  .about-detail {
+    top: 67%;
+  }
+}
+
+@media only screen and (max-width: 510px) {
+  .hero h1:nth-child(1) {
+    font-size: 30px;
+  }
+
+  .hero h1:nth-child(2) {
+    font-size: 40px;
+    top: 39%;
+  }
+
+  .hero h1:nth-child(3) {
+    font-size: 40px;
+    top: 43%;
+  }
+
+  .btn-ghost {
+    top: 48%;
+  }
+
+  .title {
+    font-size: 30px;
+  }
+
+  .about-detail {
+    top: 68%;
+  }
+}
